✨ PIC-1812 add offender entity (#597)
* ✨ PIC-1859 post merge updates

* ✨ PIC-1812 changes to restore PACT running

* ✨ PIC-1812 add hearing to CCM pact

Co-authored-by: John Evans <john.evans@digital.justice.gov.uk>